# MakineAI-Plugin-MakineAIHook

./: CMakeLists.txt  LICENSE  README.md  manifest.json  vcpkg.json
include/makineai/: error.hpp  logging.hpp  metrics.hpp  types.hpp
src/: asset_parser.cpp  plugin.cpp
src/hooking/: hook_manager.cpp  hook_manager.h
src/memory/: memory_extractor.cpp
